add theme router
